# acv-devenv

./: README.md
acv/: CMakeLists.txt  user.cmake.sample
acv/app/: CMakeLists.txt
acv/app/peoplecount/: CMakeLists.txt  peoplecount.cpp  peoplecount.h  peoplecount.lua
acv/core/: CMakeLists.txt  app.cpp  app.h  cable_info.cpp  cable_info.h  event.cpp  event.h  main.cpp  module.cpp  module.h  module_factory.cpp  module_factory.h  module_graph.cpp  module_graph.h  script_cmd.cpp  script_cmd.h  script_if.cpp  script_if.h
acv/module/: CMakeLists.txt
acv/module/pc_logic/: CMakeLists.txt  CompressiveTracker.cpp  CompressiveTracker.h  DLBPUtilities.cpp  DLBPUtilities.h  ImageEnhancement.cpp  ImageEnhancement.h  MotionDetection.cpp  MotionDetection.h  TrackingManager.cpp  TrackingManager.h  bgfg_vibe.cpp  bgfg_vibe.hpp  bwlabel.h  pc_event.cpp  pc_event.h  pc_logic.cpp  pc_logic.h  ssim.cpp  ssim.h  target.cpp  target.h  tracklet.cpp  tracklet.h  utilities.cpp  utilities.h
acv/module/pc_logic/LBPDetector/: BlockDenseLBP.cpp  BlockDenseLBP.h  BlockLBPDetector.cpp  BlockLBPDetector.h  BlockLBPDetector_withpose.cpp  BlockLBPDetector_withpose.h  ColorHist.cpp  ColorHist.h  ColorLBPDetector.cpp  ColorLBPDetector.h  DenseLBP.cpp  DenseLBP.h  ExportDLBP.h  IntegralULBPHist.cpp  IntegralULBPHist.h  KernelULBPHist.cpp  KernelULBPHist.h  LBPDetector.cpp  LBPDetector.h  LBPUtils.cpp  LBPUtils.h  MeanShiftDetector.h  MeanshiftDetector.cpp  MultipleDetectors.cpp  MultipleDetectors.h  ULBPHist.cpp  ULBPHist.h
acv/module/pc_logic/ThreadManager/: ThreadManager.cpp  ThreadManager.h  ThreadSynchronization.cpp  ThreadSynchronization.h
acv/module/video_in/: CMakeLists.txt  frame_source.h  video_in.cpp  video_in.h
acv/module/video_in/http_mjpg/: MjpgCapture.cpp  MjpgCapture.h  http_mjpg_source.cpp  http_mjpg_source.h
acv/module/video_in/rtsp/: DecoderSink.cpp  DecoderSink.h  MPRTSPClient.cpp  MPRTSPClient.h  rtsp_handlers.cpp  rtsp_handlers.h  rtsp_source.cpp  rtsp_source.h  sched_thread.h
acv/module/video_in/video/: video_source.cpp  video_source.h
acv/module/video_out/: CMakeLists.txt  frame_sink.h  video_out.cpp  video_out.h
acv/module/video_out/file/: file_sink.cpp  file_sink.h
windows/lib/: create-librepo.ps1
windows/lib/psscript/: setup-prereqs.ps1
